Revert "Fix alignment of icons on matrix"
This reverts commit 7e1b1aad14a1ee2d005b83f9725c5e96cea9cc69.

--- a/static/sass/_pattern_matrix.scss
+++ b/static/sass/_pattern_matrix.scss
@@ -67,8 +67,4 @@
       margin-top: 0;
     }
   }
-
-  .p-matrix__content {
-    padding-left: 4rem;
-  }
 }
